Update Spring version and dependencies and update unit tests