@@ -5,24 +5,27 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
+        <version>3.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.scurtis</groupId>
     <artifactId>ime-server</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
     <name>ime-server</name>
     <description>Spring Boot service to support InterviewMe application</description>
 
     <properties>
-        <java.version>17</java.version>
-        <postgresql.r2dbc.version>1.0.3.RELEASE</postgresql.r2dbc.version>
-        <r2dbc.migrate.version>2.10.3</r2dbc.migrate.version>
-        <postgresql.jdbc.version>42.7.1</postgresql.jdbc.version>
-        <h2database.version>2.2.222</h2database.version>
-        <checkstyle.plugin.version>3.3.0</checkstyle.plugin.version>
-        <checkstyle.version>9.3</checkstyle.version>
-        <jacoco.plugin.version>0.8.10</jacoco.plugin.version>
+        <java.version>21</java.version>
+        <checkstyle.plugin.version>3.6.0</checkstyle.plugin.version>
+        <checkstyle.version>11.0.1</checkstyle.version>
+        <h2database.version>2.4.240</h2database.version>
+        <jacoco.plugin.version>0.8.13</jacoco.plugin.version>
+<!--        <lombok.version>1.18.38</lombok.version>-->
+        <maven.plugin.version>3.14.0</maven.plugin.version>
+        <postgresql.r2dbc.version>1.0.7.RELEASE</postgresql.r2dbc.version>
+        <postgresql.jdbc.version>42.7.8</postgresql.jdbc.version>
+<!--        <r2dbc.migrate.version>2.10.3</r2dbc.migrate.version>-->
+        <surefire.plugin.version>3.5.3</surefire.plugin.version>
     </properties>
 
     <dependencies>
@@ -45,11 +48,16 @@
             <version>${postgresql.r2dbc.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>name.nkonev.r2dbc-migrate</groupId>
-            <artifactId>r2dbc-migrate-spring-boot-starter</artifactId>
-            <version>${r2dbc.migrate.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>name.nkonev.r2dbc-migrate</groupId>-->
+<!--            <artifactId>spring-boot-starter-r2dbc-migrate</artifactId>-->
+<!--            <version>0.0.23</version>-->
+<!--        </dependency>        -->
+<!--        <dependency>-->
+<!--            <groupId>name.nkonev.r2dbc-migrate</groupId>-->
+<!--            <artifactId>r2dbc-migrate-spring-boot-starter</artifactId>-->
+<!--            <version>${r2dbc.migrate.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -88,6 +96,106 @@
     <build>
         <plugins>
 
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>-->
+<!--                            <groupId>org.projectlombok</groupId>-->
+<!--                            <artifactId>lombok</artifactId>-->
+<!--                        </exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
+<!--            <plugin>-->
+<!--                <groupId>org.jacoco</groupId>-->
+<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--                <version>${jacoco.plugin.version}</version>-->
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>com/scurtis/ime/Application.class</exclude>-->
+<!--                        <exclude>com/scurtis/ime/config/*</exclude>-->
+<!--                        <exclude>com/scurtis/ime/dto/*</exclude>-->
+<!--                        <exclude>com/scurtis/ime/entity/*</exclude>-->
+<!--                        <exclude>com/scurtis/ime/exception/model/*</exclude>-->
+<!--                        <exclude>com/scurtis/ime/exception/ImeServerException.class</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>coverage-initialize</id>-->
+<!--                        <goals>-->
+<!--                            <goal>prepare-agent</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>coverage-report</id>-->
+<!--                        <phase>post-integration-test</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>report</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    &lt;!&ndash; Require >80% Coverage &ndash;&gt;-->
+<!--                    <execution>-->
+<!--                        <id>coverage-check</id>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <rules>-->
+<!--                                <rule>-->
+<!--                                    <element>BUNDLE</element>-->
+<!--                                    <limits>-->
+<!--                                        <limit>-->
+<!--                                            <counter>BRANCH</counter>-->
+<!--                                            <value>COVEREDRATIO</value>-->
+<!--                                            <minimum>80%</minimum>-->
+<!--                                        </limit>-->
+<!--                                        <limit>-->
+<!--                                            <counter>LINE</counter>-->
+<!--                                            <value>COVEREDRATIO</value>-->
+<!--                                            <minimum>80%</minimum>-->
+<!--                                        </limit>-->
+<!--                                        <limit>-->
+<!--                                            <counter>INSTRUCTION</counter>-->
+<!--                                            <value>COVEREDRATIO</value>-->
+<!--                                            <minimum>80%</minimum>-->
+<!--                                        </limit>-->
+<!--                                    </limits>-->
+<!--                                </rule>-->
+<!--                            </rules>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+
+
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--                <version>${checkstyle.plugin.version}</version>-->
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>com.puppycrawl.tools</groupId>-->
+<!--                        <artifactId>checkstyle</artifactId>-->
+<!--                        <version>${checkstyle.version}</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
+<!--                <configuration>-->
+<!--                    <configLocation>/config/checkstyle/checkstyle.xml</configLocation>-->
+<!--                    <includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -102,19 +210,36 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <release>${java.version}</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.plugin.version}</version>
-                <configuration>
-                    <excludes>
-                        <exclude>com/scurtis/ime/Application.class</exclude>
-                        <exclude>com/scurtis/ime/config/*</exclude>
-                        <exclude>com/scurtis/ime/dto/*</exclude>
-                        <exclude>com/scurtis/ime/entity/*</exclude>
-                        <exclude>com/scurtis/ime/exception/model/*</exclude>
-                        <exclude>com/scurtis/ime/exception/ImeServerException.class</exclude>
-                    </excludes>
-                </configuration>
                 <executions>
                     <execution>
                         <id>coverage-initialize</id>
@@ -128,6 +253,16 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>com/scurtis/ime/Application.class</exclude>
+                                <exclude>com/scurtis/ime/config/*</exclude>
+                                <exclude>com/scurtis/ime/dto/*</exclude>
+                                <exclude>com/scurtis/ime/entity/*</exclude>
+                                <exclude>com/scurtis/ime/exception/model/*</exclude>
+                                <exclude>com/scurtis/ime/exception/ImeServerException.class</exclude>
+                            </excludes>
+                        </configuration>
                     </execution>
                     <!-- Require >80% Coverage -->
                     <execution>
@@ -136,22 +271,20 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
+                            <excludes>
+                                <exclude>com/scurtis/ime/Application.class</exclude>
+                                <exclude>com/scurtis/ime/config/*</exclude>
+                                <exclude>com/scurtis/ime/dto/*</exclude>
+                                <exclude>com/scurtis/ime/entity/*</exclude>
+                                <exclude>com/scurtis/ime/exception/model/*</exclude>
+                                <exclude>com/scurtis/ime/exception/ImeServerException.class</exclude>
+                            </excludes>
                             <rules>
                                 <rule>
-                                    <element>BUNDLE</element>
+                                    <element>CLASS</element>
                                     <limits>
                                         <limit>
-                                            <counter>BRANCH</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>80%</minimum>
-                                        </limit>
-                                        <limit>
                                             <counter>LINE</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>80%</minimum>
-                                        </limit>
-                                        <limit>
-                                            <counter>INSTRUCTION</counter>
                                             <value>COVEREDRATIO</value>
                                             <minimum>80%</minimum>
                                         </limit>
@@ -162,7 +295,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
